...
    <string name="advanced_security">Advanced Security</string>
    <string name="enter_phrase">Enter Phrase</string>
    <string name="enter_secret_key">Enter Secret Key</string>
    <string name="secret_phrase">Secret Phrase</string>
    <string name="invalid_input_for_phrase">Invalid number of words (must be one of the followings: %s).</string>
    <string name="invalid_input_for_secret">Invalid secret key.</string>
    <string name="create_word_option_1">Create 12 word recovery phrase</string>
    <string name="create_word_option_2">Create 24 word recovery phrase</string>
    <string name="recover_from_phrase">Recover from phrase</string>
    <string name="recover_from_seed">Recover from secret key</string>
    <string name="passphrase_hint">Enter passphrase</string>
    <string name="passphrase_dialog_title">Enter a passphrase</string>
    <string name="passphrase_dialog_info">Passphrase along with mnemonic phrase will be used to derive your address.</string>
    <string name="passphrase_dialog_error">Please retry, passphrases don\'t match</string>
...
