...
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/padding_vertical"
                android:layout_marginBottom="@dimen/padding_vertical"
                android:src="@drawable/ic_logo_dmc" />

            <io.demars.stellarwallet.views.pin.PinLockView
                android:id="@+id/pinLockView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                app:keypadButtonSize="@dimen/button_height_big"
                app:keypadDeleteButtonDrawable="@drawable/ic_backspace_24dp"
                app:keypadHorizontalSpacing="@dimen/pin_spacing_horizontal"
...
