...
            android:paddingEnd="@dimen/padding_horizontal"
            android:textColor="@color/colorYellow"
            android:layout_marginBottom="@dimen/padding_mini"
            android:text="@string/advanced_security" />

    <Button
        android:id="@+id/confirmButton"
        style="@style/ButtonStyleAccentFlat"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_height_big"
        android:text="@string/confirm_written" />

</LinearLayout>
