...
                style="@style/SettingsButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/personal_information" />

            <TextView
                android:id="@+id/logOutButton"
                style="@style/SettingsButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sign_out" />

            <TextView
...
